--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "fastify": "^3.28.0",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "prisma": "^3.12.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
