--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "",
   "dependencies": {
     "@prisma/client": "^3.12.0",
+    "dayjs": "^1.11.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "fastify": "^3.28.0",
