--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "test",
-    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/infra/http/server.ts",
     "preprod": "npx prisma migrate deploy",
-    "prod": "node ./dist/infra/http/server.js",
+    "prod": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "postprod": "node ./dist/infra/http/server.js",
+    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/infra/http/server.ts",
     "migration:save": "npx prisma migrate dev --name create-tables",
     "migration:reset": "npx prisma migrate reset",
-    "build": "npx prisma generate"
+    "test": "test"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,8 @@
     "fastify": "^3.28.0",
     "fp-ts": "^2.11.8",
     "io-ts": "^2.2.16",
-    "io-ts-types": "^0.5.16"
+    "io-ts-types": "^0.5.16",
+    "tsconfig-paths": "^3.14.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
@@ -47,7 +48,7 @@
     "prisma": "^3.12.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.12.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.5.5"
   }
 }
