--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "fastify": "^3.28.0",
     "fp-ts": "^2.11.8",
     "io-ts": "^2.2.16",
-    "io-ts-types": "^0.5.16",
-    "tsconfig-paths": "^3.14.1"
+    "io-ts-types": "^0.5.16"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
@@ -48,6 +47,7 @@
     "prisma": "^3.12.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.14.1",
     "tscpaths": "^0.0.9",
     "typescript": "^4.5.5"
   }
